--- a/desktop.ini
+++ b/desktop.ini
@@ -1,2 +1,2 @@
 [.ShellClassInfo]
-IconResource=D:\pyProject\basicTextAnalyzer\assets\ico\basicTextAnalyser-256.ico,0
+IconResource=D:\pyProject\Yarn\assets\ico\Yarn-256.ico,0
