refactor: translate entire codebase to English

--- a/config/btn_settings_config.json
+++ b/config/btn_settings_config.json
@@ -1,7 +1,7 @@
 {
   "aside_is_open": false,
-  "btn_workspaces": true,
+  "btn_workspaces": false,
   "btn_tools": false,
-  "btn_plugins": false,
+  "btn_plugins": true,
   "btn_settings": false
 }
