--- a/config/btn_settings_config.json
+++ b/config/btn_settings_config.json
@@ -1,8 +1,8 @@
 {
-  "aside_is_open": false,
-  "btn_workspaces": true,
+  "aside_is_open": true,
+  "btn_workspaces": false,
   "btn_tools": false,
   "btn_plugins": false,
   "btn_settings": false,
-  "btn_logs": false
+  "btn_logs": true
 }
