feat: extra panel

--- a/config/btn_settings_config.json
+++ b/config/btn_settings_config.json
@@ -1,8 +1,7 @@
 {
   "aside_is_open": true,
   "btn_workspaces": false,
-  "btn_tools": false,
+  "btn_tools": true,
   "btn_plugins": false,
-  "btn_settings": false,
-  "btn_logs": true
+  "btn_settings": false
 }
