--- a/config/config.json
+++ b/config/config.json
@@ -2,5 +2,5 @@
   "termsAccepted": false,
   "theme": "dark_theme",
   "fonts": "basic_fonts",
-  "current_workspaces": "work"
+  "current_workspaces": "other"
 }
