remove: redundant information from logs

--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,6 @@
 {
   "termsAccepted": false,
-  "theme": "darkx_theme",
+  "theme": "dark_theme",
   "fonts": "basic_fonts",
   "current_workspaces": "other"
 }
